force-app/main/default/objects/Stripe_Price__mdt/Stripe_Price__mdt.object-meta.xml
<CustomObject>
    <description>Stores subscription plans and pricing</description>
    <label>Stripe Price</label>
    <pluralLabel>Stripe Price</pluralLabel>
</CustomObject>