force-app/main/default/objects/Stripe_Price__mdt/fields/PricePerUnit__c.field-meta.xml
<CustomField>
    <fullName>PricePerUnit__c</fullName>
    <label>Price per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>