force-app/main/default/objects/Stripe_Price__mdt/fields/RecurrencyType__c.field-meta.xml
<CustomField>
    <fullName>RecurrencyType__c</fullName>
    <label>Recurrency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>