force-app/main/default/objects/Stripe_Price__mdt/fields/TierNumber__c.field-meta.xml
<CustomField>
    <fullName>TierNumber__c</fullName>
    <label>Tier Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>